fix(): fix auto scroll, collapse tool output

--- a/bricks/ai-portal/src/cruise-canvas/NodeJob/NodeJob.module.css
+++ b/bricks/ai-portal/src/cruise-canvas/NodeJob/NodeJob.module.css
@@ -10,8 +10,8 @@
 }
 
 .error {
-  outline-offset: 4px;
-  outline: 2px solid var(--color-error);
+  box-shadow: inset 0px 0px 8px 2px rgba(242, 76, 37, 0.6);
+  border-color: rgba(242, 76, 37, 0.6);
 }
 
 .heading {
@@ -27,8 +27,16 @@
   margin-right: 6px;
 }
 
+.tool {
+  flex: 1;
+  min-width: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .time {
-  margin-left: auto;
+  margin-left: 6px;
 }
 
 .body {
@@ -107,6 +115,30 @@
 
 .human-input::placeholder {
   color: var(--antd-input-placeholder-color);
+}
+
+.tool-call {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+}
+
+.failed {
+  color: var(--color-error);
+}
+
+.expand {
+  position: absolute;
+  bottom: 4px;
+  right: 8px;
+  visibility: hidden;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.node-job:hover .expand {
+  visibility: visible;
 }
 
 /* Copied from https://github.com/PrismJS/prism-themes/blob/447479fc7b2be2051fe27e561aceed7cc87a589f/themes/prism-one-light.css */
